--- a/src/css/boards.css
+++ b/src/css/boards.css
@@ -1,9 +1,12 @@
 .board {
   display: grid;
+  justify-items: center;
+  /* align-items: center; */
   /* width: auto; */
-  width: 100%;
-  height: 100%;
+  /* width: 100%; */
+  /* height: 100%; */
   margin: auto auto;
+  /* margin-top: 1vh; */
   background-color: var(--lightBlue);
 }
 
