--- a/src/css/controls.css
+++ b/src/css/controls.css
@@ -30,27 +30,21 @@ button:hover {
   display: flex;
   flex-direction: column;
   background-color: var(--lightBlue);
-  /* background-color: green; */
   font-family: var(--font-family);
-  /* width: 100vw; */
-  /* height: auto; */
-  /* margin-top: 0; */
-  margin: 0vh 5vw;
+  margin: 1vh 5vw 0vh 5vw;
 }
 
 .controls {
   display: flex;
-  /* flex-direction: column; */
   justify-content: space-around;
   align-items: center;
   background-color: var(--lightBlue);
-  /* margin-bottom: 1vh; */
   font-size: var(--font-size);
 }
 
 .incdec {
   font-size: var(--font-size);
-  padding: 0;
+  /* padding: 0; */
 }
 
 .indec:hover {
@@ -64,7 +58,7 @@ input {
   border: none;
   padding: 6px;
   text-align: center;
-  max-width: 16vw;
+  max-width: 15vw;
   font-size: 1rem;
   font-family: var(--font-family);
 }
@@ -77,10 +71,8 @@ input {
 
 .screen-change-btn {
   color: black;
-  /* width: 100%; */
   width: auto;
   padding: 0;
-  /* height: 50%; */
   font-size: 2vw;
 }
 
@@ -89,7 +81,6 @@ input {
 }
 
 .score {
-  /* margin: auto auto; */
   font-size: var(--font-size);
 }
 
@@ -97,12 +88,10 @@ input {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  /* margin: 1vw; */
 }
 
 .teamlist {
   display: flex;
-  /* flex-direction: column; */
   justify-content: space-between;
 }
 
@@ -111,5 +100,4 @@ input {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  /* margin: 1vh 1vw; */
 }
