--- a/src/css/mediumscreens.css
+++ b/src/css/mediumscreens.css
@@ -1,10 +1,10 @@
-@media (max-width: 720px) {
+@media (max-width: 1200px) {
   img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    height: 16vw;
-    width: 16vw;
+    height: 13vw;
+    width: 13vw;
   }
 
   div.card {
